<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">卡片</string>
    
    <string name="action_settings">Settings</string>
    <string name="title_activity_flash_card_detail">卡片</string>
    <string name="text_set_input">请输入类名</string>
    
    <string name="menu_about">About</string>
    <string name="menu_add_set">添加类</string>
    <string name="menu_export_db">备份</string>
    <string name="menu_text_previous_card">前</string>
    <string name="menu_text_next_card">后</string>
    <string name="menu_settings">设置</string>
    <string name="menu_text_share">分享</string>
    <string name="menu_add_question">添加卡片</string>
    <string name="menu_edit_question">修改卡片</string>
    <string name="menu_delete_question">删除卡片</string>
    <string name="menu_exam">考试</string>
    
    <string name="menu_save_card">更新</string>
    
    <string name="alert_dialog_title">退出卡片应用</string>
    <string name="alert_dialog_title_back">重新选择</string>
    <string name="alert_dialog_title_add_update_card">放弃更新</string>
    <string name="alert_dialog_title_done_set">已经学完，重新选择</string>

    <string name="alert_dialog_ok_button_text">是</string>
    <string name="alert_dialog_notok_button_text">否</string>
    
    <string name="alert_first_card_already">已经是第一张卡片</string>
    <string name="alert_last_card_already">已经是最后一张卡片</string>
    <string name="alert_generic_error_msg">错误发生！</string>
    
    <string name="alert_invalid_card_info">请输入正确卡片信息！</string>
       
    
    <string name="setting_font_size_caption">设置字体大小</string>
    <string name="setting_font_size_header_title">标题字体</string>
    <string name="setting_font_size_header_description">设置标题字体大小</string>
    <string name="setting_font_size_textview_title">正文字体</string>
    <string name="setting_font_size_textview_description">设置文本字体大小</string>
    <string name="setting_font_size_chapterChooser_title">Category/SET选取字体</string>
    <string name="setting_font_size_chapterChooser_description">设置Category/SET选取字体大小</string>
    
    <string name="dialog_set_add">添加类</string>
    
    <string name="title_activity_flash_card_add_update">卡片</string>
    <string name="btnAddQuestion">添加卡片</string>
    <string name="btnUpdateQuestion">修改卡片</string>
    <string name="lblQuestionTitle">卡片标题</string>
    <string name="lblQuestionContent">卡片内容</string>
    
    <string name="title_activity_flash_card_list">卡片</string>
    <string name="title_activity_flash_card_list_item">卡片</string>
    
    <string name="special_font_xingshu">书法</string>
    
    <string name="version_number">Version 0.0.6 - 08/16/2014</string>
</resources>
