<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_back_to_set_list"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="回到上层"
        android:icon="@drawable/ic_action_home"
        />
    
    <item
        android:id="@+id/menu_add_question"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_question"
        android:icon="@drawable/ic_action_new"
        
        />
    
     <item
        android:id="@+id/menu_exam"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_exam"
        />
     
     <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
</menu>